lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:17: error: type mismatch;
 found   : Double
 required: Int
		if (estSolPlat(i)) {a=i;b=getSol()(i).y}
                                                      ^